--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/ui": "^3.4",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-query-builder": "^5.0"
+        "spatie/laravel-query-builder": "^5.0",
+        "spatie/laravel-settings": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
