--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^3.4",
         "spatie/flysystem-dropbox": "^2.0",
         "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-health": "^1.8",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
