--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "livewire/livewire": "^2.10",
+        "propaganistas/laravel-phone": "^4.3",
+        "spatie/cpu-load-health-check": "^1.0",
         "spatie/flysystem-dropbox": "^2.0",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-health": "^1.8",
