--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.10",
+        "maatwebsite/excel": "^3.1",
         "propaganistas/laravel-phone": "^4.3",
+        "psr/simple-cache": "^1.0",
         "spatie/cpu-load-health-check": "^1.0",
         "spatie/flysystem-dropbox": "^2.0",
         "spatie/laravel-backup": "^8.1",
