--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": ["Helpers/Helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
